add api定義
