# service/schema/db.schema.ts
@@ -1,41 +1,27 @@
-import mongoose from "mongoose";
-import { Player, Team, TeamInfo, User } from "../types/app.type";
+import { Schema } from "mongoose";
+import { Status, Team, User } from "../types/app.type";
 
 /**
  * DB Schema /api/user/{userId}
  */
-export const UserSchema = new mongoose.Schema<User>({
+export const UserSchema = new Schema<User>({
     userId: { type: String, required: true },
     name: { type: String, required: true },
-    status: { type: String, required: true },
-});
-
-/**
- * DB Schema /api/player/{teamId}
- */
-export const PlayerSchema = new mongoose.Schema<Player>({
-    teamId: { type: String, required: true },
-    role: { type: String, required: true },
-    gameType: { type: String, required: true },
-    user: { type: UserSchema, required: true },
-});
-
-/**
- * DB Schema /api/team_info/{id}
- */
-export const TeamInfoSchema = new mongoose.Schema<TeamInfo>({
-    id: { type: String, required: true },
-    name: { type: String, required: true },
-    playerCount: { type: Number, required: true },
-    ownerCount: { type: Number, required: true },
-    keyword: { type: String, required: true },
+    status: { type: String, enum: Object.values(Status) },
+    teamId: { type: String },
+    role: { type: String, enum: ['host', 'guest'] },
+    gameType: { type: String, enum: ['owner', 'seeker'] }
 });
 
 /**
  * DB Schema /api/team/{id}
  */
-export const TeamSchema = new mongoose.Schema<Team>({
-    id: { type: String, required: true },
-    info: { type: TeamInfoSchema, required: true },
-    players: { type: [PlayerSchema], required: true },
+export const TeamSchema = new Schema<Team>({
+    teamId: { type: String, required: true },
+    hostId: { type: String, required: true },
+    name: { type: String, required: true },
+    playerCount: { type: Number, required: true },
+    ownerCount: { type: Number, required: true },
+    keyword: { type: String, required: true }
 });
+
